--- a/src/assets/scss/modules/_utils.scss
+++ b/src/assets/scss/modules/_utils.scss
@@ -71,6 +71,10 @@
   display: flex;
 }
 
+.govuk__align-items-unset {
+  align-items: unset;
+}
+
 .govuk__align-items-center {
   align-items: center;
 }
