toggles default input for isExistingStaffRecord on app-submit-button instances that require the value to be falsy

--- a/src/app/features/workers/staff-details/staff-details.component.html
+++ b/src/app/features/workers/staff-details/staff-details.component.html
@@ -119,6 +119,7 @@
     [exitText]="exitText"
     [recordSummary]="false"
     [callToAction]="this.submitTitle"
+    [isExistingStaffRecord]="!!worker"
     (clicked)="onSubmit($event)"
   ></app-submit-button>
 </form>
