--- a/src/app/features/workplace/starters/starters.component.html
+++ b/src/app/features/workplace/starters/starters.component.html
@@ -118,5 +118,9 @@
     </div>
   </fieldset>
 
-  <app-submit-button [return]="!!return" (clicked)="onSubmit($event)"></app-submit-button>
+  <app-submit-button
+    [return]="!!return"
+    [isExistingStaffRecord]="false"
+    (clicked)="onSubmit($event)"
+  ></app-submit-button>
 </form>
