--- a/src/app/features/workplace/data-sharing/data-sharing.component.html
+++ b/src/app/features/workplace/data-sharing/data-sharing.component.html
@@ -147,5 +147,6 @@
     </div>
   </div>
 
-  <app-submit-button [return]="!!return" (clicked)="onSubmit($event)"> </app-submit-button>
+  <app-submit-button [return]="!!return" [isExistingStaffRecord]="false" (clicked)="onSubmit($event)">
+  </app-submit-button>
 </form>
