--- a/src/app/features/workplace/service-users/service-users.component.html
+++ b/src/app/features/workplace/service-users/service-users.component.html
@@ -80,5 +80,9 @@
     </div>
   </div>
 
-  <app-submit-button [return]="!!return" (clicked)="onSubmit($event)"></app-submit-button>
+  <app-submit-button
+    [return]="!!return"
+    [isExistingStaffRecord]="false"
+    (clicked)="onSubmit($event)"
+  ></app-submit-button>
 </form>
