--- a/src/app/features/workplace/total-staff-question/total-staff-question.component.html
+++ b/src/app/features/workplace/total-staff-question/total-staff-question.component.html
@@ -6,8 +6,13 @@
     [form]="form"
     [formErrorsMap]="formErrorsMap"
     [submitted]="submitted"
-    [errorSummaryService]="errorSummaryService">
+    [errorSummaryService]="errorSummaryService"
+  >
   </app-total-staff>
 
-  <app-submit-button [return]="!!return" (clicked)="onSubmit($event)"></app-submit-button>
+  <app-submit-button
+    [return]="!!return"
+    [isExistingStaffRecord]="false"
+    (clicked)="onSubmit($event)"
+  ></app-submit-button>
 </form>
