--- a/src/app/shared/components/summary-record-change/summary-record-change.component.html
+++ b/src/app/shared/components/summary-record-change/summary-record-change.component.html
@@ -1,6 +1,6 @@
 <a [routerLink]="link" (click)="setReturn()">
   <ng-container *ngIf="!hasData">
-    Add information
+    Add
     <span class="govuk-visually-hidden"> for</span>
   </ng-container>
   <ng-container *ngIf="hasData"> Change</ng-container>
