adds ability to ensure link from staff record always takes user back into journey with tests

--- a/src/app/shared/components/staff-summary/staff-summary.component.html
+++ b/src/app/shared/components/staff-summary/staff-summary.component.html
@@ -46,6 +46,7 @@
             worker.uid,
             worker.mainJob?.jobId === 27 ? 'mental-health-professional' : 'main-job-start-date'
           ]"
+          [state]="{ navigatedFrom: 'staff-records' }"
           >Provide more information <span class="govuk-visually-hidden"> for {{ worker.nameOrId }}</span></a
         >
       </td>
