--- a/src/app/shared/components/staff-records-tab/staff-records-tab.component.html
+++ b/src/app/shared/components/staff-records-tab/staff-records-tab.component.html
@@ -6,7 +6,7 @@
     <a
       role="button"
       draggable="false"
-      class="govuk-button govuk-!-margin-bottom-0"
+      class="govuk-button"
       [routerLink]="['/workplace', this.workplace.uid, 'staff-record', 'create-staff-record']"
     >
       Add a staff record
