--- a/src/app/shared/components/staff-summary/staff-summary.component.html
+++ b/src/app/shared/components/staff-summary/staff-summary.component.html
@@ -46,7 +46,7 @@
             worker.uid,
             worker.mainJob?.jobId === 27 ? 'mental-health-professional' : 'main-job-start-date'
           ]"
-          >Provide more information <span class="govuk-visually-hidden"> for {{ worker.nameOrId }}</span></a
+          >Add more details <span class="govuk-visually-hidden"> for {{ worker.nameOrId }}</span></a
         >
       </td>
       <td *ngIf="wdfView" class="govuk-table__cell">
