feat(newAdminRole) Updated bulk upload page component files to use isAdminRole util and check for canViewNinoDob permission

--- a/src/app/features/bulk-upload/bulk-upload-page/bulk-upload-page.component.html
+++ b/src/app/features/bulk-upload/bulk-upload-page/bulk-upload-page.component.html
@@ -29,7 +29,7 @@
     <app-bulk-upload-related-content></app-bulk-upload-related-content>
     <app-bulk-upload-download-current-data [sanitise]="sanitise"></app-bulk-upload-download-current-data>
     <app-bulk-upload-sanitise-data-checkbox
-      *ngIf="isAdminManager"
+      *ngIf="isAdmin && canViewNinoDob"
       (checkboxToggled)="toggleSanitise($event)"
       [sanitise]="sanitise"
     ></app-bulk-upload-sanitise-data-checkbox>
