--- a/src/app/shared/components/pagination/pagination.component.html
+++ b/src/app/shared/components/pagination/pagination.component.html
@@ -1,20 +1,45 @@
 <div *ngIf="pages.length > 1" class="govuk-button-group">
-  <ng-container *ngIf="currentPageNo != 0">
-    <a class="govuk-link" href="#" (click)="goToPage($event, currentPageNo - 1)">Previous</a>
-  </ng-container>
-  <ng-container *ngFor="let page of pages; let i = index">
-    <ng-container *ngIf="currentPageNo == i; else showLink">
-      <p class="govuk-!-margin-right-3" [attr.data-testid]="'pageNoText-' + i">
-        <b>{{ i + 1 }}</b>
-      </p>
+  <ng-container *ngIf="pages.length <= 10; else greaterThanTen">
+    <ng-container *ngIf="currentPageNo != 0">
+      <a class="govuk-link" href="#" (click)="goToPage($event, currentPageNo - 1)">Previous</a>
     </ng-container>
-    <ng-template #showLink>
-      <a class="govuk-link" [attr.data-testid]="'pageNoLink-' + i" href="#" (click)="goToPage($event, i)">{{
-        i + 1
-      }}</a>
-    </ng-template>
+    <ng-container *ngFor="let page of pages; let i = index">
+      <ng-container *ngIf="currentPageNo == i; else showLink">
+        <p class="govuk-!-margin-right-3" [attr.data-testid]="'pageNoText-' + i">
+          <b>{{ i + 1 }}</b>
+        </p>
+      </ng-container>
+      <ng-template #showLink>
+        <a class="govuk-link" [attr.data-testid]="'pageNoLink-' + i" href="#" (click)="goToPage($event, i)">{{
+          i + 1
+        }}</a>
+      </ng-template>
+    </ng-container>
+    <ng-container *ngIf="currentPageNo != pages.length - 1">
+      <a class="govuk-link" href="#" (click)="goToPage($event, currentPageNo + 1)">Next</a>
+    </ng-container>
   </ng-container>
-  <ng-container *ngIf="currentPageNo != pages.length - 1">
-    <a class="govuk-link" href="#" (click)="goToPage($event, currentPageNo + 1)">Next</a>
-  </ng-container>
+
+  <ng-template #greaterThanTen>
+    <ng-container *ngIf="currentPageNo != 0">
+      <a class="govuk-link" href="#" (click)="goToPage($event, currentPageNo - 1)">Previous</a>
+    </ng-container>
+    <ng-container *ngFor="let page of pages; let i = index">
+      <ng-container *ngIf="i === 0 || i === pages.length - 1 || withinTwoOfCurrentPage(i)">
+        <ng-container *ngIf="currentPageNo == i; else showLink">
+          <p class="govuk-!-margin-right-3" [attr.data-testid]="'pageNoText-' + i">
+            <b>{{ i + 1 }}</b>
+          </p>
+        </ng-container>
+        <ng-template #showLink>
+          <a class="govuk-link" [attr.data-testid]="'pageNoLink-' + i" href="#" (click)="goToPage($event, i)">{{
+            i + 1
+          }}</a>
+        </ng-template>
+      </ng-container>
+    </ng-container>
+    <ng-container *ngIf="currentPageNo != pages.length - 1">
+      <a class="govuk-link" href="#" (click)="goToPage($event, currentPageNo + 1)">Next</a>
+    </ng-container>
+  </ng-template>
 </div>
