--- a/src/app/shared/components/staff-summary/staff-summary.component.html
+++ b/src/app/shared/components/staff-summary/staff-summary.component.html
@@ -57,3 +57,8 @@
     </tr>
   </tbody>
 </table>
+<app-pagination
+  [noOfItemsOnPage]="15"
+  [totalNoOfItems]="workers.length"
+  (emitCurrentPage)="updateDisplayedWorkers($event)"
+></app-pagination>
