add saveAs package to files that need it, change _overlay.scss due to updated @angular/cdk

--- a/src/assets/scss/modules/_overlay.scss
+++ b/src/assets/scss/modules/_overlay.scss
@@ -1,9 +1,9 @@
-@import '~@angular/cdk/_overlay.scss';
+@import '~@angular/cdk/_index.scss';
 
 $cdk-overlay-dark-backdrop-background: rgba(0, 0, 0, 0.5);
 $backdrop-animation-duration: 0ms !default;
 
-@include cdk-overlay();
+@include overlay();
 
 .cdk-overlay-pane {
   background: govuk-colour('white');
