feat(staffRecordsPagination) Refactored Pagination component logic

--- a/src/app/shared/components/pagination/pagination.component.html
+++ b/src/app/shared/components/pagination/pagination.component.html
@@ -34,26 +34,26 @@
 
   <ng-template #greaterThanTen>
     <ng-container *ngFor="let page of pages; let i = index">
-      <ng-container *ngIf="i === 0 || i === pages.length - 1 || withinTwoOfCurrentPage(i) || showElipsisCheck(i)">
-        <ng-container *ngIf="currentPageNo == i; else showLinkOrElipsis">
-          <p class="govuk-!-margin-right-3" [attr.data-testid]="'pageNoText-' + i">
-            <b>{{ i + 1 }}</b>
-          </p>
-        </ng-container>
-        <ng-template #showLinkOrElipsis>
-          <ng-container *ngIf="showElipsisCheck(i); else showLink">
-            <ng-container *ngIf="i === 0 || i === pages.length - 1; then showLink; else showElipsis"></ng-container>
-            <ng-template #showElipsis>
-              <p id="paginationElipsis" [attr.data-testid]="'elipsis-' + i">...</p>
-            </ng-template>
-          </ng-container>
-        </ng-template>
-        <ng-template #showLink>
-          <a class="govuk-link" [attr.data-testid]="'pageNoLink-' + i" href="#" (click)="goToPage($event, i)">{{
-            i + 1
-          }}</a>
-        </ng-template>
+      <ng-container *ngIf="currentPageNo == i; else showLinkOrElipsis">
+        <p class="govuk-!-margin-right-3" [attr.data-testid]="'pageNoText-' + i">
+          <b>{{ i + 1 }}</b>
+        </p>
       </ng-container>
+      <ng-template #showLinkOrElipsis>
+        <ng-container *ngIf="showElipsisCheck(i); else showLink">
+          <p id="paginationElipsis" [attr.data-testid]="'elipsis-' + i">...</p>
+        </ng-container>
+        <ng-template #showLink>
+          <a
+            *ngIf="showPageLink(i)"
+            class="govuk-link"
+            [attr.data-testid]="'pageNoLink-' + i"
+            href="#"
+            (click)="goToPage($event, i)"
+            >{{ i + 1 }}</a
+          >
+        </ng-template>
+      </ng-template>
     </ng-container>
   </ng-template>
 
