--- a/src/app/shared/components/pagination/pagination.component.html
+++ b/src/app/shared/components/pagination/pagination.component.html
@@ -17,7 +17,7 @@
     >
   </ng-container>
 
-  <ng-container *ngIf="pages.length <= 10; else greaterThanTen">
+  <ng-container *ngIf="pages.length <= 10 && isBigWindow; else showEllipses">
     <ng-container *ngFor="let page of pages; let i = index">
       <ng-container *ngIf="currentPageNo == i; else showLink">
         <p class="govuk-!-margin-right-3" [attr.data-testid]="'pageNoText-' + i">
@@ -32,28 +32,30 @@
     </ng-container>
   </ng-container>
 
-  <ng-template #greaterThanTen>
-    <ng-container *ngFor="let page of pages; let i = index">
-      <ng-container *ngIf="currentPageNo == i; else showLinkOrElipsis">
-        <p class="govuk-!-margin-right-3" [attr.data-testid]="'pageNoText-' + i">
-          <b>{{ i + 1 }}</b>
-        </p>
-      </ng-container>
-      <ng-template #showLinkOrElipsis>
-        <ng-container *ngIf="showElipsisCheck(i); else showLink">
-          <p id="paginationElipsis" [attr.data-testid]="'elipsis-' + i">...</p>
+  <ng-template #showEllipses>
+    <ng-container *ngIf="isBigWindow">
+      <ng-container *ngFor="let page of pages; let i = index">
+        <ng-container *ngIf="currentPageNo == i; else showLinkOrElipsis">
+          <p class="govuk-!-margin-right-3" [attr.data-testid]="'pageNoText-' + i">
+            <b>{{ i + 1 }}</b>
+          </p>
         </ng-container>
-        <ng-template #showLink>
-          <a
-            *ngIf="showPageLink(i)"
-            class="govuk-link"
-            [attr.data-testid]="'pageNoLink-' + i"
-            href="#"
-            (click)="goToPage($event, i)"
-            >{{ i + 1 }}</a
-          >
+        <ng-template #showLinkOrElipsis>
+          <ng-container *ngIf="showElipsisCheck(i); else showLink">
+            <p id="paginationElipsis" [attr.data-testid]="'elipsis-' + i">...</p>
+          </ng-container>
+          <ng-template #showLink>
+            <a
+              *ngIf="showPageLink(i)"
+              class="govuk-link"
+              [attr.data-testid]="'pageNoLink-' + i"
+              href="#"
+              (click)="goToPage($event, i)"
+              >{{ i + 1 }}</a
+            >
+          </ng-template>
         </ng-template>
-      </ng-template>
+      </ng-container>
     </ng-container>
   </ng-template>
 
