feat(pagination) refactored updateDisplayWorkers to getPageOfWorkers, updated getPageOfWorkers

--- a/src/app/shared/components/staff-summary/staff-summary.component.html
+++ b/src/app/shared/components/staff-summary/staff-summary.component.html
@@ -60,5 +60,5 @@
 <app-pagination
   [noOfItemsOnPage]="15"
   [totalNoOfItems]="workers.length"
-  (emitCurrentPage)="updateDisplayedWorkers($event)"
+  (emitCurrentPage)="getPageOfWorkers($event)"
 ></app-pagination>
