refactors flow for pagination component changes and renames variables

--- a/src/app/shared/components/training-and-qualifications-summary/training-and-qualifications-summary.component.html
+++ b/src/app/shared/components/training-and-qualifications-summary/training-and-qualifications-summary.component.html
@@ -97,5 +97,6 @@
 <app-pagination
   [noOfItemsOnPage]="itemsPerPage"
   [totalNoOfItems]="workerCount"
+  [pageIndex]="pageIndex"
   (emitCurrentPage)="handlePageUpdate($event)"
 ></app-pagination>
