feat(staffSummaryFrontEndBackEndCollaboration): Update pagination emission to only pass index as itemsPerPage is in parent component

--- a/src/app/shared/components/staff-summary/staff-summary.component.html
+++ b/src/app/shared/components/staff-summary/staff-summary.component.html
@@ -61,5 +61,5 @@
   [itemsPerPage]="itemsPerPage"
   [totalNoOfItems]="workerCount"
   (emitCurrentPage)="handlePageUpdate($event)"
-  [(currentPageIndex)]="currentPageIndex"
+  [currentPageIndex]="currentPageIndex"
 ></app-pagination>
