--- a/src/app/shared/components/search-input/search-input.component.scss
+++ b/src/app/shared/components/search-input/search-input.component.scss
@@ -10,6 +10,25 @@ button > img {
   z-index: 2;
 }
 
-.govuk-input--search .govuk-button {
-  padding: 5px;
+.govuk-input--search .govuk-button:not(.govuk-button--link) {
+  height: 40px;
+  width: 40px;
+  box-shadow: none;
+  position: relative;
+  text-indent: -5000px;
+  overflow: hidden;
+}
+
+.govuk-input--search .govuk-button:not(.govuk-button--link) img {
+  display: block;
+  position: absolute;
+  height: 20px;
+  width: 20px;
+  top: 7.5px;
+  left: 7.5px;
+  pointer-events: none;
+}
+
+.govuk-input--search .govuk-button:not(.govuk-button--link):focus {
+  background-color: #1d70b8;
 }
