feat(staffSummaryFrontEndBackEndCollaboration): Pass workerCount into staff-summary component

--- a/src/app/features/workplace/view-workplace/view-workplace.component.html
+++ b/src/app/features/workplace/view-workplace/view-workplace.component.html
@@ -38,7 +38,11 @@
       </app-tab>
 
       <app-tab *ngIf="workplace && canViewListOfWorkers" [alert]="totalStaffRecords === 0" [title]="'Staff records'">
-        <app-staff-records-tab [workplace]="workplace" [workers]="workers"></app-staff-records-tab>
+        <app-staff-records-tab
+          [workplace]="workplace"
+          [workers]="workers"
+          [workerCount]="workerCount"
+        ></app-staff-records-tab>
       </app-tab>
       <app-tab
         *ngIf="workplace && canViewListOfWorkers"
