--- a/src/app/shared/components/staff-records-tab/staff-records-tab.component.html
+++ b/src/app/shared/components/staff-records-tab/staff-records-tab.component.html
@@ -33,7 +33,12 @@
     [returnToDash]="true"
   ></app-total-staff-panel>
 
-  <app-staff-summary *ngIf="workers" [workplace]="workplace" [workers]="workers"></app-staff-summary>
+  <app-staff-summary
+    *ngIf="workers"
+    [workplace]="workplace"
+    [workers]="workers"
+    [workerCount]="workerCount"
+  ></app-staff-summary>
 </ng-container>
 
 <ng-template #noStaffRecords>
