--- a/src/app/shared/components/search-input/search-input.component.html
+++ b/src/app/shared/components/search-input/search-input.component.html
@@ -18,8 +18,8 @@
           type="button"
           (click)="handleOnSubmit($event)"
         >
-          search
-          <img src="/assets/images/bin.svg" alt="" />
+          {{ searchButtonName }}
+          <img src="/assets/images/search-icon.svg" alt="" />
         </button>
       </div>
     </div>
