feat(staffSummaryFrontEndBackEndCollaboration): Update training-and-qualifications-summary to pass in itemsPerPage

--- a/src/app/shared/components/training-and-qualifications-summary/training-and-qualifications-summary.component.html
+++ b/src/app/shared/components/training-and-qualifications-summary/training-and-qualifications-summary.component.html
@@ -95,7 +95,7 @@
   </tbody>
 </table>
 <app-pagination
-  [noOfItemsOnPage]="itemsPerPage"
+  [itemsPerPage]="itemsPerPage"
   [totalNoOfItems]="workerCount"
   [pageIndex]="pageIndex"
   (emitCurrentPage)="handlePageUpdate($event)"
